public/less/style.less
@primary-color: #00897B;
@accent-color: #ff4081;

@border-radius: 0;

@box-shadow-small: -2px 2px 1px 0 rgba(0,0,0,.1);
@box-shadow-medium: -3px 3px 1px 0 rgba(0,0,0,.15);

@font-size-small: 14px;
@font-size-medium: 18px;
@font-size-large: 24px;

html, body {
	width: 100%;
	height: 100%;

	.modal {

		.modal-content {
			border-radius: @border-radius;

			.modal-header {
				background: @primary-color;
				color: white;

				button {
					background: none;
					border: none;
				}
			}
		}
	}

	#menu {
		bottom: 0;
		left: 0;
		position: absolute;
		top: 0;
		width: 33%;
		height: 100%;
		background: white;
		z-index: 1000;
		box-shadow: 3px 0px 4px 0 rgba(0,0,0,.15);

		header {
			background: @primary-color;
			text-align: center;
			color: white;
			padding: 1rem;

			h3 {
				margin-bottom: 0;
			}
		}

		#search {
			padding: 1rem;

		}

		#content {
			padding: 1rem;
			margin-top: 1.5rem;

			#tool-button-container {
				display: flex;
				flex-wrap: wrap;

				justify-content: space-around;

				.tool-button {
					cursor: pointer;
					background: @primary-color;
					color: white;
					border-radius: @border-radius;
					text-align: center;
					height: 6rem;
					width: 6rem;
					margin: 1rem auto;
					border: none;
					box-shadow: @box-shadow-small;

					h3 {
						font-size: @font-size-small;
					}

					.material-icons {
						font-size: 2.5rem;
					}

					&:hover {
						background-color: @accent-color;
					}
				}
			}

			.tool {
				border: 1px solid @primary-color;
				box-shadow: @box-shadow-medium;
				text-align: center;

				.controls {

					header {
						width: 100%;
						background: @primary-color;
						color: white;
						text-align: left;

						h3 {
							padding-top: .5rem;
							font-size: @font-size-medium;
						}
					}

					.content {
						padding: 1rem;
						font-size: @font-size-small;
					}


				}

				.results {
					padding: 1rem;
					margin-top: 1.5rem;
				}

			}
		}
	}

	#map {
	    bottom: 0;
	    left: 33%;
	    position: absolute;
	    right: 0;
	    top: 0;

	    .leaflet-control {
	    	border-radius: @border-radius !important;

	    	a {
	    		border-radius: @border-radius !important;
	    	}
	    }

	    .leaflet-draw {
			display: none;
		}
	}

	.modal-footer {
	    margin: 0 auto;
	    text-align: center;
	}

	.modal-footer button {
	    cursor: pointer;
	}

	.or {
	    text-align: center;
	}

	.gt-input {
		border-radius: @border-radius;
		border: 1px solid @primary-color;
		padding: .1rem .5rem;
		margin: auto;
		display: block;
		max-width: 30rem;
		width: 80%;

		> input {
			border: none;
			padding: .5rem;
		}
	}

	.gt-button {
		cursor: pointer;
		border-radius: @border-radius;
		background: @primary-color;
		border: none;
		color: white;
		padding: .5rem 1rem;
	}

	.gt-remove {
		border-radius: 50%;
		box-shadow: @box-shadow-small;
		cursor: pointer;
		float: right;
		background: @accent-color;
		color: white;
		padding: .25rem;
	}
}

// mobile
@media screen and (max-width: 45.5em) {

	html body {

		#menu {
			z-index: 1000;
			position: relative;
			margin: 1em auto;
			width: 80%;
			border-radius: @border-radius;
			padding: .75rem;
			text-align: center;
			border: 1px solid @primary-color;

			#menu-header {
				display: none;
			}

			#search {
				padding: 0;


				#search-input {
					padding: .5rem 1rem;
					width: 100%;
					display: block;
					margin: 0 auto;
				}
			}

			#content {
				padding: 0;
				margin: 0;

				#tool-button-container, .controls {
					display: none;
				}

				.tool {
					border: none;
				}

				&.focus {
					padding: 1rem;
					margin-top: 1.5rem;

					#tool-button-container {
						display: flex;
					}

					.controls {
						display: block;
					}
					
					.tool {
						border: 1px solid @primary-color;
					}
				}

				.results {
					position: fixed;
					background: white;
					width: 80%;
					left: 10%;
					bottom: 1rem;
					box-shadow: @box-shadow-medium;
					border: 1px solid @primary-color;
				}
			}
		}

		#map {
			left: 0;
			
			.leaflet-top {
				top: 7.5rem;
			}

		}
	}

}


/* if user is hiding the menu, make the map take up the whole screen */
[hide_menu=true] {
    #map {
        left: 0;
    }
    #menu {
        display: none;
    }
}

